# hannibot

./: .dockerignore  .env.example  .infisical.json  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Taskfile.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  mise.toml  pyproject.toml
.github/workflows/: build-and-push.yaml
bot/cogs/: schedule.py
common/: settings.py
docs/: bun.lockb  package.json
infra/helm/hannibot/: Chart.yaml  values.yaml
infra/helm/hannibot/templates/: configmap.yaml  deployment.yaml  secrets.yaml
