[project]
name = "hannibot"
version = "1.4.0"
description = ""
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = "~=3.12.0"
license = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.10.10,<4",
    "discord.py>=2.4.0,<3",
    "requests>=2.32.3,<3",
    "tqdm>=4.67.0,<5",
    "python-dotenv>=1.0.1,<2",
    "loguru>=0.7.2,<0.8",
    "watchdog[watchmedo]>=6.0.0,<7",
    "click>=8.1.7,<9",
    "psycopg2-binary>=2.9.10,<3",
    "lxml>=5.3.0,<6",
    "beautifulsoup4>=4.12.3,<5",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "pytz>=2024.2,<2025",
    "asyncpraw>=7.8.0,<8",
    "sqlalchemy>=2.0.36,<3",
    "asyncpg>=0.30.0,<0.31",
    "python-ulid[pydantic]>=3.0.0,<4",
    "alembic>=1.13.3,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.7.1,<0.8",
    "ipython>=8.29.0,<9",
    "ty>=0.0.20",
]

[tool.ruff]
target-version = "py312"
